examples/errors/condition_type_loop.aaa
fn main begin
    while 3 true begin
        nop
    end
    drop
end
